network-policies/manifests/np/02-db-access-fights.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
     name: fights-db-policy
     namespace: app-demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: rest-fights
          app.kubernetes.io/part-of: fights-service
          app.kubernetes.io/version: java17-latest
    ports:
    - port: 27017
      protocol: TCP
  podSelector:
    matchLabels:
      name: fights-db
  policyTypes:
  - Ingress
