network-policies/manifests/np/02-db-access-heroes.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: heroes-db-policy
  namespace: app-demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: rest-heroes
          app.kubernetes.io/part-of: heroes-service
          app.kubernetes.io/version: java17-latest
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      name: heroes-db
  policyTypes:
  - Ingress
