network-policies/manifests/np/02-db-access-villains.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: villains-db-policy
  namespace: app-demo
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: rest-villains
          app.kubernetes.io/part-of: villains-service
          app.kubernetes.io/version: java17-latest
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      name: villains-db
  policyTypes:
  - Ingress
