network-policies/manifests/np/04-api-heroes.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-heroes-policy
  namespace: app-demo
spec:
  ingress:
  - ports:
    - port: 8083
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rest-heroes
      app.kubernetes.io/part-of: heroes-service
      app.kubernetes.io/version: java17-latest
  policyTypes:
  - Ingress
