network-policies/manifests/np/04-api-villains.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-villains-policy
  namespace: app-demo
spec:
  ingress:
  - ports:
    - port: 8084
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rest-villains
      app.kubernetes.io/part-of: villains-service
      app.kubernetes.io/version: java17-latest
  policyTypes:
  - Ingress
